--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <!--YOUR NAME-->
             <h5 class="text-uppercase">Your name</h5>
-            <a href="#" class="first-column d-flex flex-row align-items-center text-decoration-none justify-content-center gap-2" target="_blank">
+            <a href="#" class="first-column d-flex flex-row align-items-center text-decoration-none justify-content-center gap-2">
                 <h3><i class="bi bi-github"></i></h3>
                 <span>GitHub</span>
             </a>
