--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
-    <title>Link Free</title>
+    <title>Links Free</title>
 </head>
 <body class="d-flex justify-content-center align-items-center ">
     <div class="area" >
